Bug 368229 - [Frameworks] 'change light & dark colors' broken
Summary: [Frameworks] 'change light & dark colors' broken
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-04 06:19 UTC by tguen
Modified: 2016-10-29 11:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tguen 2016-09-04 06:19:29 UTC
In settings > configure okular > accessibility, there is an option to change light & dark colors. I set the light (background) color to black and the dark (text) color to light gray. The background is dark gray, and the text is light gray around the edges and black in the middle. After turning off text anti-aliasing, the text is black.

http://i.imgur.com/F13sAf4.png
http://i.imgur.com/1lNbGvG.png

Reproducible: Always
Comment 1 Christoph Feck 2016-09-05 01:31:11 UTC
Could be caused by https://marc.info/?l=kde-commits&m=146940640713539&w=2
Comment 2 Martin Sandsmark 2016-10-29 11:02:12 UTC
Git commit ff3cc05b6b0f1a7d6cbd8d80b5832667f973132d by Martin T. H. Sandsmark.
Committed on 29/10/2016 at 11:02.
Pushed by sandsmark into branch 'frameworks'.

Fix recoloring of inverted colors.

M  +3    -3    ui/pagepainter.cpp

http://commits.kde.org/okular/ff3cc05b6b0f1a7d6cbd8d80b5832667f973132d