Fix recoloring of inverted colors.

BUG: 368229